--- a/fraud-investigation-ai/package.json
+++ b/fraud-investigation-ai/package.json
@@ -9,8 +9,15 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
-    "@nuxt/content": "^3.11.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
