--- a/django/.env.example
+++ b/django/.env.example
@@ -4,3 +4,6 @@
 
 # Google AI Studio API Key (get from https://aistudio.google.com/apikey)
 GOOGLE_API_KEY=your_google_api_key_here
+
+# Gemini Model Configuration
+GEMINI_MODEL=models/gemini-2.5-flash-lite
