--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
     "better-sqlite3": "^12.6.2",
+    "echarts": "^5.5.0",
+    "vue-echarts": "^7.0.0",
     "nuxt": "^4.3.0"
   },
   "devDependencies": {
